Onboarding Activity added
With the Onboarding Activity scrolleble onbording views added to application

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">BerkayYalcinPazaramaCase</string>
+
+    <!-- Onboarding Page-->
+    <string name="on_boarding_skip_button">Skip</string>
+    <string name="on_boarding_start_button">Start</string>
+    <string name="on_boarding_prev_button">Prev</string>
 </resources>
